--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <button style="padding: 10px;" onclick="fetching()">click</button>
 <button style="padding: 10px;" onclick="loadUser()">click</button>
 
+<div>
+    <ul id="userList">
+
+    </ul>
+</div>
 
     <script src="js/api.js"></script>
 </body>
