--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
 <button style="padding: 10px;" onclick="fetching()">click</button>
 <button style="padding: 10px;" onclick="loadUser()">click</button>
+<button onclick="createAPost()">Create post</button>
+<button onclick="postDelete()">Delete post</button>
+<button onclick="patchPost()">Patch post</button>
 
 <div>
     <ul id="userList">
